Colab을 통해 생성됨

--- a/1_CodeCells_Basic.ipynb
+++ b/1_CodeCells_Basic.ipynb
@@ -64,27 +64,13 @@
     {
       "cell_type": "code",
       "source": [
-        "a=1\n",
-        "b=2\n",
-        "print(a+b)"
+        "a = 1"
       ],
       "metadata": {
-        "id": "3Xw3fNhSawZg",
-        "outputId": "6bddc5f3-e7a3-4bb5-8412-528365d42bd5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "vzJryo0-DABA"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3\n"
-          ]
-        }
-      ]
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -96,7 +82,18 @@
       "metadata": {
         "id": "xV1LWOHyWZaq"
       },
-      "execution_count": 1,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = 2"
+      ],
+      "metadata": {
+        "id": "CKwLdzkoDBqV"
+      },
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -110,6 +107,29 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a + b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RVCLdwToDDHt",
+        "outputId": "4dbb34b7-362d-4e7e-d286-7b598bfb1409"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -147,17 +167,17 @@
     {
       "cell_type": "code",
       "source": [
-        "c=3\n",
-        "print(c)\n"
+        "c = 3\n",
+        "print (c)"
       ],
       "metadata": {
-        "id": "FTzE7WM-g6J9",
-        "outputId": "cf166741-9d64-4fc6-8a23-f79bb6395592",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YL6-YNXPDEZQ",
+        "outputId": "5ade977a-b6ab-4aaf-a7fe-3d2529c16848"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,13 +220,13 @@
         "print(c-b)"
       ],
       "metadata": {
-        "id": "QucQSeLkg-Je",
-        "outputId": "742337f4-da0f-4402-8a0b-034f688d609f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_hM0yTlPDHHn",
+        "outputId": "31cf597d-e8a1-41d6-f8d5-dad80194843c"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,16 +265,16 @@
       "cell_type": "code",
       "source": [
         "a=100\n",
-        "print(a+b)"
+        "print (a+b)"
       ],
       "metadata": {
-        "id": "LGjEhlBqhNG2",
-        "outputId": "c7cb435c-4153-403e-ab43-93f6884abe0c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Pd47Bhj0DKzs",
+        "outputId": "946a9d48-59cf-4784-ccf6-2a0bbaafa2e0"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
